Fix Alternate Checkbox Alignment For h-b-li Toggle

--- a/SCSS/ITS Theme/Custom CSS/_CCSS-SlRvb - Mini Snippets.scss
+++ b/SCSS/ITS Theme/Custom CSS/_CCSS-SlRvb - Mini Snippets.scss
@@ -88,3 +88,17 @@
 
 
 
+
+/*Hide Bullet List Line*/
+.h-b-li li { border: none !important; }
+
+//Alternate Checkbox Aligment Adjustments
+.h-b-li.h-b-li .task-list-item-checkbox 
+{ margin-right: 5px; }
+.h-b-li ul > li.task-list-item .task-list-item-checkbox 
+{ margin-left: -21px; }
+
+.h-b-li li.task-list-item {
+    padding-left: 2px;
+    margin-left: 3px;
+}
