--- a/SCSS/ITS Theme/_Lists - Bull & Num.scss
+++ b/SCSS/ITS Theme/_Lists - Bull & Num.scss
@@ -38,7 +38,7 @@ ol ul > li::before { visibility: visible; }
 ul, ol { 
     padding-inline-start: 25px;
 }
-// ul > li.task-list-item .task-list-item-checkbox { margin-left: -27px; }
+ul > li.task-list-item .task-list-item-checkbox { margin-left: -26px; }
 .markdown-preview-view ol > li.task-list-item { padding-left: 10px; }
 // .markdown-preview-view ul > li.task-list-item { list-style: none; }
 
@@ -47,10 +47,10 @@ ul, ol {
 ul li.task-list-item > p { margin-block-end: unset; }
 ul li > p { margin-block-end: unset; }
 
-.markdown-preview-view .task-list-item-checkbox.task-list-item-checkbox,
-.task-list-item input[type=checkbox], li.task-list-item {
-    margin-right: .3em;
-}
+// .markdown-preview-view .task-list-item-checkbox.task-list-item-checkbox,
+// .task-list-item input[type=checkbox], li.task-list-item {
+//     margin-right: .3em;
+// }
 
 
 /*Editor Bullet Points*/
@@ -112,8 +112,6 @@ li {
 li:nth-child(even) {
     border-left: var(--b-line) solid var(--accent2);
 }
-.h-b-li li { border: none; }
-
 
 /*List Arrows*/
 .markdown-preview-view ul .list-collapse-indicator {
