--- a/obsidian.css
+++ b/obsidian.css
@@ -4059,6 +4059,10 @@ ul, ol {
   padding-inline-start: 25px;
 }
 
+ul > li.task-list-item .task-list-item-checkbox {
+  margin-left: -26px;
+}
+
 .markdown-preview-view ol > li.task-list-item {
   padding-left: 10px;
 }
@@ -4070,11 +4074,6 @@ ul li.task-list-item > p {
 
 ul li > p {
   margin-block-end: unset;
-}
-
-.markdown-preview-view .task-list-item-checkbox.task-list-item-checkbox,
-.task-list-item input[type=checkbox], li.task-list-item {
-  margin-right: 0.3em;
 }
 
 /*Editor Bullet Points*/
@@ -4145,10 +4144,6 @@ li {
 
 li:nth-child(even) {
   border-left: var(--b-line) solid var(--accent2);
-}
-
-.h-b-li li {
-  border: none;
 }
 
 /*List Arrows*/
@@ -5147,6 +5142,24 @@ progress::-webkit-progress-value {
 .recall:hover {
   color: var(--text-normal);
   text-shadow: 0 0 0px var(--text-normal);
+}
+
+/*Hide Bullet List Line*/
+.h-b-li li {
+  border: none !important;
+}
+
+.h-b-li.h-b-li .task-list-item-checkbox {
+  margin-right: 5px;
+}
+
+.h-b-li ul > li.task-list-item .task-list-item-checkbox {
+  margin-left: -21px;
+}
+
+.h-b-li li.task-list-item {
+  padding-left: 2px;
+  margin-left: 3px;
 }
 
 /*----Image Positions/Adjustments----*/
